# bible-cli

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
bible_cli/: Untitled-1.ipynb  __init__.py  constants.py  database.py  main.py  processor.py  schemas.py  types.py  utils.py
tests/: test_utils.py
