[project]
name = "qbible"
version = "0.1.0"
description = "CLI and library to query Portuguese Bible versions"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
dependencies = [
    "sqlalchemy>=2.0.49",
    "typer>=0.24.1",
]

[project.scripts]
bible-cli = "bible_cli.main:app"
[project.optional-dependencies]
dev = ["pytest>=9.0.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "bible_cli/**/*.py",
    "bible_cli/data_source/*.sqlite",
]
